<resources>
    <string name="app_name">MapRoute App</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="no_image_available">No image available</string>
    <string name="destination">Destination</string>
    <string name="source">Source</string>
    <string name="cafe_coffee_day_electronic_city_bengaluru">Coffee day,Electronic city,Bengaluru</string>
    <string name="hinders_pinging_bats1">///hinders,pinging,bats</string>
    <string name="hinders_pinging_bats">///camps,submerge,shipping</string>
    <string name="address_bangalore">HBPR,Layout,Madiwala,Bengaluru</string>
    <string name="fastest_route">FASTEST ROUTE</string>
    <string name="metro">Metro</string>
    <string name="bus">Bus</string>
    <string name="report">Report</string>
    <string name="estimated_price">ESTIMATED PRICE</string>
    <string name="travel_time">TRAVEL TIME</string>
    <string name="distance">DISTANCE</string>
    <string name="api_key">AIzaSyBwfPZTY0kY_bQHZSskQI5SGdyxxqOjhCc</string>
    <string name="_06_minS">06 mins</string>
    <string name="bus_route_name">SHD44</string>
    <string name="_234m">234 Mtr</string>
    <string name="next_scheduled">NEXT SCHEDULED:</string>
    <string name="_12_00pm">12:00 PM</string>
    <string name="_12_50pm">12:50 PM</string>
    <string name="get_in_station">Get in station</string>
    <string name="get_down_station">Get down station</string>
    <string name="sett_22">SETT-22</string>
    <string name="cs_corporation_bank">CS-Corporation bank kamanahii</string>
    <string name="address_route2_getDown">CS-St.Joseph Boys high school Museum Road</string>
</resources>